--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="myapplication2.com.ront.MainActivity">
+    tools:context="myapplication2.com.ront.EventActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
