--- a/app/src/main/res/menu/menu_routine.xml
+++ b/app/src/main/res/menu/menu_routine.xml
@@ -1,15 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="myapplication2.com.ront.EventActivity">
+    tools:context="com.example.user.projectpart1.RoutineActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/addtask"
-        android:title="Add Task"
-        app:showAsAction="always"
-        android:icon="@drawable/addtask"/>
 </menu>
