changes in activity_routine_create.xml,fragment_monday.xml and changes to their java file. Now we can add events in particular week, but till now i work only for Monday There is an error while click on submit button in routine_create activity .please look at it

--- a/app/src/main/res/layout/fragment_monday.xml
+++ b/app/src/main/res/layout/fragment_monday.xml
@@ -5,10 +5,14 @@
     tools:context="myapplication2.com.ront.Monday">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/task_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Monday Schedule" />
+        android:visibility="visible">
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
