--- a/app/src/main/res/layout/activity_routine_create.xml
+++ b/app/src/main/res/layout/activity_routine_create.xml
@@ -45,12 +45,140 @@
                 android:textSize="20sp" />
 
             <Button
+                android:id="@+id/add"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
+                android:onClick="addClicked"
                 android:background="@drawable/ic_check_black_24dp"/>
 
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/toolbar"
+        android:paddingTop="50dp">
+
+    <RelativeLayout
+        android:id="@+id/rname"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_alignParentStart="true"
+        android:clickable="true">
+
+        <ImageView
+            android:id="@+id/assi_icon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="32dp"
+            android:src="@drawable/assi" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/assi_icon"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/set_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Task Name"
+                android:textColor="#000"
+                android:textSize="15dp"/>
+
+
+        </LinearLayout>
+    </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/stime"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_below="@id/rname"
+            android:layout_alignParentStart="true"
+            android:clickable="true"
+            android:onClick="setsTime">
+
+            <ImageView
+                android:id="@+id/stime_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="32dp"
+                android:src="@drawable/time" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/stime_icon"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/set_stime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Start Time"
+                    android:textColor="#000"
+                    android:textSize="15dp"
+                    android:onClick="setsTime"/>
+
+
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/etime"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_below="@id/stime"
+            android:layout_alignParentStart="true"
+            android:clickable="true"
+            android:onClick="seteTime">
+
+            <ImageView
+                android:id="@+id/etime_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="32dp"
+                android:src="@drawable/time" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/etime_icon"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/set_etime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="End Time"
+                    android:textColor="#000"
+                    android:textSize="15dp"
+                    android:onClick="seteTime"/>
+
+
+            </LinearLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+
 </RelativeLayout>
