--- a/app/src/main/res/layout/activity_routine_create.xml
+++ b/app/src/main/res/layout/activity_routine_create.xml
@@ -25,7 +25,7 @@
             android:showDividers="end">
 
             <Button
-                android:id="@+id/back"
+                android:id="@+id/Back"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
