--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,51 +21,30 @@
         android:id="@+id/editText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editText5"
-        android:layout_alignStart="@+id/editText7"
-        android:layout_marginBottom="53dp"
+        android:layout_alignStart="@+id/editText6"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="151dp"
         android:ems="10"
         android:hint="@string/email_address"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editText5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editText6"
-        android:layout_alignStart="@+id/editText4"
-        android:layout_marginBottom="12dp"
-        android:ems="10"
-        android:hint="@string/username"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editText6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText5"
-        android:layout_centerVertical="true"
+        android:layout_alignTop="@+id/editText4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="71dp"
         android:ems="10"
         android:hint="@string/password"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editText7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText6"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:hint="@string/mobile_number"
-        android:inputType="textPersonName" />
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText7"
+        android:layout_below="@+id/editText6"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="30dp"
         android:text="@string/signup" />
 </RelativeLayout>
