now each user will get its own data which he/she save. created the new activity as assignment which we have to add in our daily routine schedule before the deadline.

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,9 +5,13 @@
         android:title="Routine"
         android:icon="@drawable/ic_event_black_24dp"/>
 
-    <item android:id="@+id/event"
+    <item android:id="@+id/assign"
         android:title="Assignment"
         android:icon="@drawable/ic_assignment_black_24dp"/>
+
+    <item android:id="@+id/event"
+        android:title="Reminder"
+        android:icon="@drawable/remind"/>
 
     <item android:id="@+id/logout"
         android:title="Logout"
