now each user will get its own data which he/she save. created the new activity as assignment which we have to add in our daily routine schedule before the deadline.

--- a/app/src/main/res/layout/activity_assignment.xml
+++ b/app/src/main/res/layout/activity_assignment.xml
@@ -158,9 +158,10 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:hint="Set Estimate Time"
+                    android:inputType="number"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:onClick="setEstime"/>
+                    />
 
 
             </LinearLayout>
