Changed drawer.AssignmentView1 activity incomplete.

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -6,7 +6,11 @@
         android:icon="@drawable/ic_event_black_24dp"/>
 
     <item android:id="@+id/assign"
-        android:title="Assignment"
+        android:title="Assignment/Deadline"
+        android:icon="@drawable/ic_assignment_black_24dp"/>
+
+    <item android:id="@+id/planner"
+        android:title="onTime Planner"
         android:icon="@drawable/ic_assignment_black_24dp"/>
 
     <item android:id="@+id/event"
