--- a/app/src/main/res/layout/activity_assignment_adder.xml
+++ b/app/src/main/res/layout/activity_assignment_adder.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="myapplication2.com.ront.AssignmentActivity">
+    tools:context="myapplication2.com.ront.AssignmentAdderActivity">
 
 
     <LinearLayout
