--- a/app/src/main/res/layout/activity_on_planner_date.xml
+++ b/app/src/main/res/layout/activity_on_planner_date.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginTop="70dp"
         android:background="@drawable/bg_tv"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
