--- a/app/src/main/res/layout/activity_single_task.xml
+++ b/app/src/main/res/layout/activity_single_task.xml
@@ -40,7 +40,8 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="40dp"
                 android:paddingRight="70dp"
-                android:text="BeOnTime"
+                android:text="@string/app_name"
+                android:textStyle="bold"
                 android:textSize="20sp" />
 
         </LinearLayout>
