--- a/app/src/main/res/layout/activity_update_assignment.xml
+++ b/app/src/main/res/layout/activity_update_assignment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="myapplication2.com.ront.AssignmentAdderActivity">
+    tools:context="myapplication2.com.ront.UpdateAssignment">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -29,7 +29,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:background="@drawable/back"/>
+                android:background="@drawable/back"
+                android:onClick="back"/>
 
             <TextView
                 android:id="@+id/toolbar_save"
@@ -56,44 +57,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="90dp"
+        android:paddingTop="100dp"
         android:id="@+id/linearLayout4">
 
-<RelativeLayout
-    android:id="@+id/aname"
-    android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:layout_alignParentStart="true"
-    android:clickable="true">
+        <RelativeLayout
+            android:id="@+id/aname"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_alignParentStart="true"
+            android:clickable="true">
 
-    <ImageView
-        android:id="@+id/assi_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="32dp"
-        android:src="@drawable/assi" />
+            <ImageView
+                android:id="@+id/assi_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="32dp"
+                android:src="@drawable/assi" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/assi_icon"
-        android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/assi_icon"
+                android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/ass_name"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:hint="Assignment Name"
-            android:textColor="#000"
-            android:textSize="15dp"/>
+                <EditText
+                    android:id="@+id/ass_name"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Assignment Name"
+                    android:textColor="#000"
+                    android:textSize="15dp"/>
 
 
-    </LinearLayout>
-</RelativeLayout>
+            </LinearLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/dtime"
@@ -271,6 +272,5 @@
         android:layout_marginTop="32dp"
         android:onClick="addAssignment"
         android:text="Add Assignment" />
-
 
 </RelativeLayout>
