--- a/app/src/main/res/layout/activity_on_planner_date.xml
+++ b/app/src/main/res/layout/activity_on_planner_date.xml
@@ -40,11 +40,25 @@
         android:text="Date"
         android:textColor="#FFF" />
 
+    <TextView
+        android:id="@+id/ttime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="140dp"
+        android:background="@drawable/bg_tv"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
+        android:text="Free Time Today:"
+        android:textColor="#FFF" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/planner_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="210dp"
         android:visibility="visible">
 
     </android.support.v7.widget.RecyclerView>
