--- a/app/src/main/res/layout/activity_on_planner_date.xml
+++ b/app/src/main/res/layout/activity_on_planner_date.xml
@@ -55,12 +55,16 @@
         android:textColor="#FFF" />
 
     <RadioGroup
+        android:id="@+id/rgp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/background"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_marginTop="210dp">
+
 
         <RadioButton
             android:id="@+id/radioButton"
