--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -17,22 +17,6 @@
         android:layout_below="@id/toolbar"
         >
 
-        <EditText
-            android:id="@+id/editTask"
-            android:layout_width="300dp"
-            android:layout_height="75dp"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/fab2"
-            android:gravity="top|left"
-            android:hint="Enter Task"
-            android:inputType="textCapWords|textMultiLine"
-            android:lines="4"
-            android:minLines="4"
-            android:scrollHorizontally="false"
-            android:textColor="#ffffff"
-            android:textColorHint="#151515"
-            android:textSize="25dp" />
-
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab2"
             android:layout_width="wrap_content"
@@ -68,7 +52,7 @@
 
 
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/add_reminder_layout_top"
@@ -78,8 +62,45 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/RepeatType"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:clickable="true">
+
+                <ImageView
+                    android:id="@+id/RepeatType_icon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="32dp"
+                    android:src="@drawable/assi" />
+
+                <LinearLayout
+                    android:id="@+id/edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/RepeatType_icon"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/editTask"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Task Name"
+                        android:textColorHint="#000"
+                        android:textSize="15dp" />
+
+
+
+                </LinearLayout>
+            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/date"
@@ -111,10 +132,10 @@
                         android:id="@+id/set_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:onClick="setDate"
                         android:text="Date"
                         android:textColor="#000"
-                        android:textSize="15dp"
-                        android:onClick="setDate"/>
+                        android:textSize="15dp" />
 
 
                 </LinearLayout>
@@ -124,168 +145,38 @@
                 android:id="@+id/time"
                 android:layout_width="match_parent"
                 android:layout_height="72dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
                 android:clickable="true"
                 android:onClick="setTime">
+
                 <ImageView
                     android:id="@+id/time_icon"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="32dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/time"
-                    />
+                    android:src="@drawable/time" />
+
                 <LinearLayout
+                    android:id="@+id/linearLayout2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_toRightOf="@id/time_icon"
                     android:layout_centerVertical="true"
-                    android:id="@+id/linearLayout2">
+                    android:layout_toRightOf="@id/time_icon"
+                    android:orientation="vertical">
 
 
                     <TextView
                         android:id="@+id/set_time"
-                        android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:textSize="15dp"
+                        android:layout_height="wrap_content"
+                        android:onClick="setTime"
                         android:text="Time"
                         android:textColor="#000"
-                        android:onClick="setTime"/>
-
-
-                </LinearLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/repeat"
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                >
-                <ImageView
-                    android:id="@+id/repeat_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/loop"
-                    />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_toRightOf="@id/repeat_icon"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/linearLayout">
-
-                    <TextView
-                        android:id="@+id/repeat_text"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textSize="15dp"
-                        android:text="Repeat"
-                        android:textColor="#000"/>
-                    <TextView
-                        android:id="@+id/set_repeat"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textSize="15dp"
-                        android:textColor="#000"/>
-                </LinearLayout>
-
-                <Switch
-                    android:id="@+id/repeat_switch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="80dp"
-                    android:layout_toEndOf="@+id/linearLayout"
-                    android:checked="true"
-                    android:onClick="onSwitchRepeat"
-                    android:textOff="Off"
-                    android:textOn="On" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/RepeatNo"
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:clickable="true"
-                android:onClick="setRepeatNo">
-                <ImageView
-                    android:id="@+id/RepeatNo_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/rep_inter"
-                    />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_toRightOf="@id/RepeatNo_icon"
-                    android:layout_centerVertical="true">
-
-                    <TextView
-                        android:id="@+id/RepeatNo_text"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textSize="15dp"
-                        android:text="Repetition Interval"
-                        android:textColor="#000"/>
-                    <TextView
-                        android:id="@+id/set_RepeatNo"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textSize="15dp"
-                        android:textColor="#000"/>
-
-
-                </LinearLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/RepeatType"
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:clickable="true"
-                android:onClick="setRepeatType">
-                <ImageView
-                    android:id="@+id/RepeatType_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/reptype"
-                    />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_toRightOf="@id/RepeatType_icon"
-                    android:layout_centerVertical="true">
-
-                    <TextView
-                        android:id="@+id/RepeatType_text"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textSize="15dp"
-                        android:text="Type of Repetition"
-                        android:textColor="#000"/>
-                    <TextView
-                        android:id="@+id/set_RepeatType"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textSize="15dp"
-                        android:textColor="#000"/>
+                        android:textSize="15dp" />
 
 
                 </LinearLayout>
@@ -299,12 +190,12 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="260dp"
                 android:onClick="addButtonClicked"
-                android:text="Add Task"/>
+                android:text="Add Task" />
 
         </LinearLayout>
 
 
-    </ScrollView>
+    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
