--- a/app/src/main/res/layout/activity_assignment_adder.xml
+++ b/app/src/main/res/layout/activity_assignment_adder.xml
@@ -13,35 +13,8 @@
         android:background="@color/colorPrimary"
         app:layout_scrollFlags="scroll|enterAlways"
         app:popupTheme="@style/PopupOverlay"
+        app:title="New Assignment"
         >
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="?attr/actionBarSize"
-
-            android:dividerPadding="8dp"
-            android:orientation="horizontal"
-            android:showDividers="end">
-
-            <TextView
-                android:id="@+id/toolbar_save"
-                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackground"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:paddingLeft="16dp"
-                android:paddingRight="70dp"
-                android:text="New Assignment"
-                android:textStyle="bold"
-                android:textAllCaps="true"
-                android:textSize="20sp" />
-
-
-        </LinearLayout>
-
     </android.support.v7.widget.Toolbar>
 
 
